# vibehouse

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.cross  Dockerfile.dev  Dockerfile.reproducible  HANDOFF.md  Makefile  NIGHT-SHIFT-SUMMARY.md  PLAN.md  PROGRESS.md  README.md  SECURITY.md  plan.md  wordlist.txt
.cargo/: config.toml
.claude/: settings.local.json
.claude/commands/: issue.md  review.md
.config/: nextest.toml
.github/: mergify.yml
.github/ISSUE_TEMPLATE/: default-issue-template.md
.github/custom/: clippy.toml
.github/workflows/: ci.yml  docker.yml  local-testnet.yml  nightly-tests.yml  release.yml  spec-test-check.yml  test-suite.yml
account_manager/: README.md
account_manager/src/: common.rs  lib.rs
beacon_node/: Cargo.toml
beacon_node/beacon_chain/: Cargo.toml
beacon_node/beacon_processor/: Cargo.toml
beacon_node/builder_client/: Cargo.toml
beacon_node/client/: Cargo.toml
beacon_node/execution_layer/: Cargo.toml
beacon_node/genesis/: Cargo.toml
beacon_node/http_api/: Cargo.toml
beacon_node/http_api/src/: aggregate_attestation.rs  api_error.rs  attestation_performance.rs  attester_duties.rs  block_id.rs  block_packing_efficiency.rs  block_rewards.rs  build_block_contents.rs  builder_states.rs  custody.rs  database.rs  extractors.rs  inclusion_list_duties.rs  lib.rs  light_client.rs  metrics.rs  peer.rs  produce_block.rs  proposer_duties.rs  ptc_duties.rs  publish_attestations.rs  publish_blocks.rs  standard_block_rewards.rs  state_id.rs  sync_committee_rewards.rs  sync_committees.rs  task_spawner.rs  test_utils.rs  ui.rs  validator.rs  validator_inclusion.rs  validators.rs  version.rs
beacon_node/http_api/tests/: broadcast_validation_tests.rs  fork_tests.rs  interactive_tests.rs  status_tests.rs  tests.rs
beacon_node/http_metrics/: Cargo.toml
beacon_node/lighthouse_network/: Cargo.toml
beacon_node/network/: Cargo.toml
beacon_node/operation_pool/: Cargo.toml
beacon_node/src/: cli.rs  config.rs  lib.rs
beacon_node/store/: Cargo.toml
beacon_node/store/benches/: hdiff.rs
beacon_node/store/src/: blob_sidecar_list_from_root.rs  config.rs  consensus_context.rs  database.rs  errors.rs  forwards_iter.rs  hdiff.rs  historic_state_cache.rs  hot_cold_store.rs  impls.rs  iter.rs  lib.rs  memory_store.rs  metadata.rs  metrics.rs  partial_beacon_state.rs  reconstruct.rs  state_cache.rs
beacon_node/store/src/database/: interface.rs  leveldb_impl.rs  redb_impl.rs
beacon_node/store/src/impls/: execution_payload.rs  execution_payload_envelope.rs
beacon_node/tests/: test.rs
beacon_node/vibehouse_network/: Cargo.toml
beacon_node/vibehouse_tracing/: Cargo.toml
book/: README.md  book.toml
book/src/: SUMMARY.md  advanced.md  advanced_blobs.md  advanced_builders.md  advanced_checkpoint_sync.md  advanced_database.md  advanced_database_migrations.md  advanced_datadir.md  advanced_key_recovery.md  advanced_networking.md  advanced_proposer_only.md  advanced_re-orgs.md  advanced_redundancy.md  advanced_release_candidates.md  advanced_slasher.md  advanced_web3signer.md  api.md  api_bn.md  api_lighthouse.md  api_metrics.md  api_validator_inclusion.md  api_vc.md  api_vc_auth_header.md  api_vc_endpoints.md  api_vibehouse.md  archived_key_management.md  archived_merge_migration.md  archived_pi.md  contributing.md  contributing_setup.md  developers.md  developers_architecture.md  faq.md  help_bn.md  help_general.md  help_vc.md  help_vm.md  help_vm_create.md  help_vm_import.md  help_vm_move.md  (+27 more)
boot_node/: Cargo.toml
boot_node/src/: cli.rs  config.rs  lib.rs  server.rs
common/account_utils/: Cargo.toml
common/clap_utils/: Cargo.toml
common/deposit_contract/: Cargo.toml  build.rs
common/deposit_contract/src/: lib.rs
common/eth2/: Cargo.toml
common/eth2_config/: Cargo.toml
common/eth2_interop_keypairs/: Cargo.toml
common/eth2_network_config/: build.rs
common/filesystem/: Cargo.toml
common/health_metrics/: Cargo.toml
common/logging/: Cargo.toml
common/lru_cache/: Cargo.toml
common/monitoring_api/: Cargo.toml
common/sensitive_url/: Cargo.toml
common/system_health/: Cargo.toml
common/vibehouse_version/: Cargo.toml
common/warp_utils/: Cargo.toml
consensus/int_to_bytes/: Cargo.toml
consensus/merkle_proof/: Cargo.toml
consensus/proto_array/: Cargo.toml
consensus/state_processing/: Cargo.toml
consensus/types/: Cargo.toml
crypto/bls/: Cargo.toml
crypto/eth2_key_derivation/: Cargo.toml
crypto/eth2_keystore/: Cargo.toml
crypto/eth2_wallet/: Cargo.toml
crypto/kzg/: Cargo.toml
database_manager/src/: cli.rs  lib.rs
docs/: devnet-checks.md
docs/decisions/: self-build-payload-inclusion.md
docs/sessions/: 2026-02-14-ci-fixes-phase4.md  2026-02-14-cron-session-summary.md  2026-02-14-cron-session.md  2026-02-14-debug-gloas-ef-tests.md  2026-02-14-night-shift-test-fixes.md  2026-02-14-phase3-fork-choice-start.md  2026-02-14-phase4-beacon-processor.md  2026-02-14-phase4-complete-discovery.md  2026-02-14-phase4-complete-verification.md  2026-02-14-phase4-gossip-validation-start.md  2026-02-14-phase4-gossip-validation.md  2026-02-14-phase4-p2p-beacon-processor-complete.md  (+7 more)
kurtosis/: epbs-devnet-0.yaml  vibehouse-builder.yaml  vibehouse-epbs.yaml  vibehouse-heze.yaml  vibehouse-mainnet.yaml  vibehouse-multiclient.yaml  vibehouse-stateless.yaml  vibehouse-sync.yaml
lcli/: Cargo.toml  Dockerfile
lighthouse/: Cargo.toml
rocq/: .BuilderPayments.aux  .PtcQuorum.aux  .lia.cache  BuilderPayments.glob  BuilderPayments.v  BuilderPayments.vo  EnvelopeTransition.v  ForkChoice.v  Makefile  PtcQuorum.glob  PtcQuorum.v  PtcQuorum.vo  TRUST_ASSUMPTIONS.md  _CoqProject
scripts/: build-docker.sh  change_version.sh  cli.sh  kurtosis-run.sh  mdlint.sh
slasher/: Cargo.toml
validator_client/: Cargo.toml
validator_client/http_metrics/: Cargo.toml
validator_client/http_metrics/src/: lib.rs
vibehouse/: Cargo.toml
zkvm/: README.md
zkvm/guest/: Cargo.toml
zkvm/guest/src/: main.rs
zkvm/host/: Cargo.toml  build.rs
zkvm/host/src/: main.rs
(+852 files in other folders)
