[package]
name = "http_api"
version = "0.1.0"
authors = ["Paul Hauner <paul@paulhauner.com>"]
edition = { workspace = true }
autotests = false                               # using a single test binary compiles faster

[dependencies]
axum = { workspace = true }
beacon_chain = { workspace = true }
beacon_processor = { workspace = true }
bs58 = "0.5.1"
bytes = { workspace = true }
directory = { workspace = true }
eth2 = { workspace = true }
ethereum_serde_utils = { workspace = true }
ethereum_ssz = { workspace = true }
execution_layer = { workspace = true }
futures = { workspace = true }
health_metrics = { workspace = true }
hex = { workspace = true }
logging = { workspace = true }
lru = { workspace = true }
metrics = { workspace = true }
network = { workspace = true }
network_utils = { workspace = true }
operation_pool = { workspace = true }
parking_lot = { workspace = true }
proto_array = { workspace = true }
rand = { workspace = true }
safe_arith = { workspace = true }
sensitive_url = { workspace = true }
serde = { workspace = true }
serde_array_query = "0.3.0"
serde_json = { workspace = true }
slot_clock = { workspace = true }
state_processing = { workspace = true }
store = { workspace = true }
sysinfo = { workspace = true }
system_health = { path = "../../common/system_health" }
task_executor = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tree_hash = { workspace = true }
types = { workspace = true }
vibehouse_network = { workspace = true }
vibehouse_tracing = { workspace = true }
vibehouse_version = { workspace = true }

[dev-dependencies]
genesis = { workspace = true }
proto_array = { workspace = true }

[[test]]
name = "bn_http_api_tests"
path = "tests/main.rs"
