[package]
name = "store"
version = "0.2.0"
authors = ["Paul Hauner <paul@paulhauner.com>"]
edition = { workspace = true }

[dependencies]
bls = { workspace = true }
db-key = "0.1.0"
directory = { workspace = true }
ethereum_ssz = { workspace = true }
ethereum_ssz_derive = { workspace = true }
itertools = { workspace = true }
lru = { workspace = true }
metrics = { workspace = true }
parking_lot = { workspace = true }
redb = "3.1.0"
safe_arith = { workspace = true }
serde = { workspace = true }
ssz_types = { workspace = true }
state_processing = { workspace = true }
strum = { workspace = true }
superstruct = { workspace = true }
tracing = { workspace = true }
types = { workspace = true }
xdelta3 = { workspace = true }
zstd = { workspace = true }

[dev-dependencies]
beacon_chain = { workspace = true }
criterion = { workspace = true }
rand = { workspace = true, features = ["small_rng"] }
tempfile = { workspace = true }

[[bench]]
name = "hdiff"
harness = false
