[package]
name = "deposit_contract"
version = "0.2.0"
authors = ["Paul Hauner <paul@paulhauner.com>"]
edition = { workspace = true }

build = "build.rs"

[dependencies]
alloy-sol-types = { workspace = true }
ethereum_ssz = { workspace = true }
tree_hash = { workspace = true }
types = { workspace = true }

[build-dependencies]
hex = { workspace = true }
sha2 = { workspace = true }
